// The message types in this file are only used for testing purposes.
package coralproto.testing;

message IntString
{
   optional int32 i = 1;
   optional string s = 2;
}
